# opyprint

./: .buildinfo  .dockerignore  .gitignore  AUTHORS.rst  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  TODO.rst  changelog.html  config.py  conftest.py  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pytest.ini  readme.html  requirements.docs.txt  requirements.test.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: changelog.doctree  environment.pickle  index.doctree  readme.doctree
.doctrees/api/: index.doctree  pp_context.doctree  pp_styles.doctree  print.doctree
.doctrees/api/logger/: index.doctree  logged_mixin.doctree  logger.doctree  logger_base.doctree  print_logger.doctree  void_logger.doctree
.doctrees/api/utils/: index.doctree  lt.doctree  predicates.doctree
.github/workflows/: docs.yml  test.yml
_static/: documentation_options.js
api/: index.html  pp_context.html  pp_styles.html  print.html
api/logger/: index.html  logged_mixin.html  logger.html  logger_base.html  print_logger.html  void_logger.html
api/utils/: index.html  lt.html  predicates.html
docs/: changelog.rst  conf.py  index.rst  readme.rst
docs/api/: PPContext.rst  index.rst  pp_context.rst  pp_styles.rst  print.rst
docs/api/logger/: index.rst  logged_mixin.rst  logger.rst  logger_base.rst  print_logger.rst  void_logger.rst
docs/api/utils/: index.rst  lt.rst  predicates.rst
opyprint/: PPContext.py  PPStyles.py  __init__.py  apply_style.py  format.py  pp_context.py  pp_styles.py  print.py  typing.py
opyprint/logger/: __init__.py  logged_mixin.py  logger.py  print_logger.py  void_logger.py
opyprint/utils/: __init__.py  lt.py  predicates.py
tests/: test_a_format.py  test_a_print.py  test_b_call.py  test_c_context_managers.py  test_d_describe.py  test_e_print.py  test_ppcontext.py
tests/logger/: test_logged_mixin.py  test_logger.py
tests/ppcontext/: test_a_basics.py  test_b_format.py  test_c_call.py  test_d_context_managers.py  test_e__str__.py  test_e_describe.py  test_f_describe_legacy.py  test_f_print.py  test_g_print.py  test_h_style.py
tests/ppstyles/: test_a_basics.py  test_b_all.py  test_b_print_all_styles.py
tests/utils/: test_lt.py  test_predicates.py
wpyprint/: PPContext.py  __init__.py  print.py
wpyprint/utils/: __init__.py  predicates.py
