[flake8]
exclude = .cache,.git,.tox,./*/_/frameworks/,__pycache__,build,dist,docs

[metadata]
description-file = README.rst

[mypy]
python_version = 3.8

[mypy-colorama]
ignore_missing_imports = True

[mypy-numpy]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-setuptools]
ignore_missing_imports = True

[tool:pytest]
addopts = -s --color=yes --failed-first --maxfail=1 --strict
;filterwarnings =
;    ignore::_pytest.warning_types.PytestUnknownMarkWarning
;    ignore::DeprecationWarning:pytest_flake8
;    ignore::DeprecationWarning:pytest_mypy
junit_family = xunit1
norecursedirs = docs .mypy_cache
python_files = test_*.py

[pytest-watch]
ext = .csv,.jinja2,.json,.py,.yaml,.yml
watchpaths =
    ./opyprint
    ./tests
    ../frozendict/frozendict
