[flake8]
exclude = .cache,.git,.tox,./*/_/frameworks/,__pycache__,build,dist,docs

[metadata]
description-file = README.rst

[mypy]
color_output = True
error_summary = True
pretty = True
python_version = 3.8
show_error_codes = True
show_error_context = True
show_traceback = True
show_absolute_path = True
verbosity = 0
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-colorama]
ignore_missing_imports = True

[mypy-numpy]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-setuptools]
ignore_missing_imports = True

[tool:pytest]
addopts = -ra -s --color=yes --exitfirst --failed-first --strict
;filterwarnings =
;    ignore::_pytest.warning_types.PytestUnknownMarkWarning
;    ignore::DeprecationWarning:pytest_flake8
;    ignore::DeprecationWarning:pytest_mypy
junit_family = xunit1
norecursedirs = docs .mypy_cache
python_files = test_*.py

[pytest-watch]
ext = .csv,.jinja2,.json,.py,.yaml,.yml
watchpaths =
    ./opyprint
    ./tests
    ../frozendict/frozendict
