[flake8]
exclude = .cache,.git,.tox,./*/_/frameworks/,__pycache__,build,dist,docs

[metadata]
description-file = README.rst

[mypy]
allow_untyped_globals = False
color_output = True
error_summary = True
pretty = True
python_version = 3.8
show_absolute_path = True
show_column_numbers = True
show_error_codes = True
show_error_context = True
show_none_errors = True
show_traceback = True
verbosity = 0
warn_no_return = True
warn_redundant_casts = True
;warn_return_any = True
;warn_unreachable = True
warn_unused_ignores = True

[mypy-colorama]
ignore_missing_imports = True

[mypy-numpy]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-setuptools]
ignore_missing_imports = True

[tool:pytest]
addopts = -ra -s --color=yes --maxfail=5 --failed-first
;filterwarnings =
;    ignore::_pytest.warning_types.PytestUnknownMarkWarning
;    ignore::DeprecationWarning:pytest_flake8
;    ignore::DeprecationWarning:pytest_mypy
junit_family = xunit1
norecursedirs = docs .mypy_cache
python_files = test_*.py

[pytest-watch]
ext = .csv,.jinja2,.json,.py,.yaml,.yml
watchpaths =
    ./opyprint
    ./tests
    ../frozendict/frozendict
